Fix security issues flagged by Claude